--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,4 +3,9 @@
     <style name="Theme.FoodOrderingSystemYogiByte" parent="Theme.MaterialComponents.DayNight.NoActionBar">
 
     </style>
+    <!-- Base application theme. -->
+    <style name="Base.Theme.FoodOrderingSystemYogiByte" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+    </style>
 </resources>
